Training section finished

--- a/styles.css
+++ b/styles.css
@@ -539,6 +539,7 @@ a.resource-item:hover {
 .calendar {
   font-size: 14px;
   color: var(--deep-blue-80);
+  position: relative;
 }
 .cal-row {
   display: flex;
@@ -593,6 +594,108 @@ a.resource-item:hover {
   /* font-size: 10px; */
   font-weight: 400;
   /* color: var(--deep-blue); */
+}
+
+.event-popup {
+  position: absolute;
+  display: none;
+  width: 40vw;
+  height: 45vh;
+  left: calc(50% - 20vw);
+  top: calc(50% - 20vh);
+  border: 1px solid var(--energy-purple-30);
+  border-radius: 0 24px 0 0;
+}
+#event-info {
+  background-color: white;
+  flex: 1;
+  padding: 32px;
+}
+#event-form {
+  border-radius: 0 24px 0 0;
+  flex: 1;
+  padding: 32px;
+  background-color: var(--energy-purple-10);
+}
+#close-popup {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 6px 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+#event-form h5 {
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--deep-blue);
+}
+.form-input {
+  display: flex;
+  flex-direction: column;
+}
+.form-input label {
+  color: var(--deep-blue-80);
+  margin-bottom: 4px;
+  font-weight: 500;
+  font-size: 12px;
+}
+.form-input input {
+  border-radius: 0 12px 0 0;
+  border: 1px solid var(--energy-purple-30);
+  margin-bottom: 8px;
+  height: 32px;
+}
+#event-form button {
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  background-color: var(--energy-blue);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 0 12px 0 0;
+  font-weight: 600;
+  font-size: 12px;
+}
+#event-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#event-info h4 {
+  font-weight: 500;
+  font-size: 20px;
+  color: var(--deep-blue);
+  margin: 0;
+}
+.organizer {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin-top: 14px;
+  margin-bottom: 10px;
+}
+.organizer > div {
+  display: flex;
+  flex-direction: column;
+  padding-left: 8px;
+}
+.organizer-name {
+  font-weight: 600;
+}
+.organizer img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.event-span {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
 }
 
 /*******/
