--- a/styles.css
+++ b/styles.css
@@ -1131,6 +1131,10 @@ a#gallery-link:hover {
   display: block;
 }
 
+#proc-content-4 {
+  display: flex;
+  flex-direction: column;
+}
 .workstream-content {
   display: flex;
   justify-content: space-between;
@@ -1236,6 +1240,35 @@ a#gallery-link:hover {
 .stream-item:hover img,
 .stream-item.active img {
   opacity: 1;
+}
+
+.stream-table {
+  /* border: 1px solid red; */
+  margin-top: 20px;
+  width: 100%;
+  display: none;
+}
+.stream-table table {
+  width: 100%;
+  font-weight: 500;
+  font-size: 12px;
+  color: var(--deep-blue-80);
+  border-spacing: 0;
+}
+.stream-table td,
+.stream-table th {
+  border: 0.5px solid var(--deep-blue-10);
+  padding: 8px;
+}
+.stream-table td {
+  vertical-align: top;
+}
+.stream-table th {
+  background-color: var(--system-background);
+}
+.stream-table ul {
+  margin: 0;
+  padding-left: 12px;
 }
 
 /*******/
